--- a/src/views/Home/main.css
+++ b/src/views/Home/main.css
@@ -56,6 +56,7 @@ body {
     border-color: rgb(14, 105, 241) rgb(14, 105, 241) transparent transparent ;
  }
  .workstation {
+     margin-top:-52px;
      height: auto;
      padding:0 20px 0 60px;
  }
