--- a/src/views/Screen/main.css
+++ b/src/views/Screen/main.css
@@ -6,3 +6,27 @@ p { margin: 0; padding: 0 10px; }
     border-bottom-left-radius: 4px !important;
     margin-right: 8px !important;
 }
+.homescreen{
+    display: flex;
+    height:100%;
+}
+.screen1{
+    display: flex;
+    height:100%;
+}
+.screen2 {
+    display: flex;
+    height: 100%;
+}
+.screen3{
+    display: flex;
+    height: 100%;
+}
+.screen4{
+    display: flex;
+    height: 100%;
+}
+.screen5{
+    display: flex;
+    height: 100%;
+}
